--- a/md_files/2_cassandra_architecture-md/1.md
+++ b/md_files/2_cassandra_architecture-md/1.md
@@ -1,12 +1,12 @@
 
 
-Chapter 2. Cassandra Architecture {.title}
+lab 2. Cassandra Architecture
 ---------------------------------
 
-In this chapter, we will discuss the architecture behind Apache
+In this lab, we will discuss the architecture behind Apache
 Cassandra in detail. We will discuss how Cassandra was designed and how
 it adheres to the **Brewer's CAP** theorem, which will give us insight
-into the reasons for its behavior. Specifically, this chapter will
+into the reasons for its behavior. Specifically, this lab will
 cover:
 
 -   Problems that Cassandra was designed to solve
@@ -15,7 +15,7 @@ cover:
 -   How data is stored on-disk
 -   How Cassandra handles failure scenarios
 
-This chapter will help you to build a good foundation of understanding
+This lab will help you to build a good foundation of understanding
 that will prove very helpful later on. Knowing how Apache Cassandra
 works under the hood helps for later tasks around operations. Building
 high-performing, scalable data models is also something that requires an
