--- a/md_files/2_cassandra_architecture-md/2.md
+++ b/md_files/2_cassandra_architecture-md/2.md
@@ -16,7 +16,8 @@ NoSQL databases largely came about as new and innovative ways to solve this prob
 ### Cassandra and the CAP theorem
 Many of the design ideas behind Apache Cassandra were largely influenced by Amazon Dynamo. It embraced partition-tolerance to be able to scale horizontally when needed, as well as to reduce the likelihood of an outage due to having a single point of failure. Cassandra also prefers to serve its data in a highly-available fashion, and embraces the concept of eventual consistency:
 
+![](https://raw.githubusercontent.com/fenago/apache-cassandra-intellij/master/md_files/mastering_images/1.png)
 
-Figure 2.1: A graphical representation of Brewer's CAP theorem, using sides of a triangle to represent the combination of the different properties of consistency, availability, and partition tolerance
+A graphical representation of Brewer's CAP theorem, using sides of a triangle to represent the combination of the different properties of consistency, availability, and partition tolerance
 
 When data is written, it is replicated to multiple instances. During this process, it is possible that one (or more) of the replica writes could fail. Reads for this data would then return stale or dirty results. However, one of the design choices for Cassandra was that the possibility of serving stale data outweighed the risk of a request failing. This clearly gives Cassandra a CAP designation as an AP database.
