--- a/md_files/2_cassandra_architecture-md/3.md
+++ b/md_files/2_cassandra_architecture-md/3.md
@@ -1,4 +1,4 @@
-Cassandra's ring architecture {.title style="clear: both"}
+Cassandra's ring architecture
 -----------------------------
 
 * * * * *
@@ -12,7 +12,7 @@ data is hashed to determine it's **token**. The data is sent to the
 nodes responsible for the token ranges that contain the hashed token
 value.
 
-### Note {.title}
+### Note
 
 The consistent hashing algorithm is used in many distributed systems,
 because it has intrinsic ways of dealing with changing range
@@ -22,18 +22,15 @@ by* *Strickland R. (2014), published by Packt.
  
 
 The partition key (formerly known as a **row key**) is the first part of
-`PRIMARY KEY`{.literal}, and the key that determines the row’s token or
-placement in the cluster. `PRIMARY KEY`{.literal} components will be
-further discussed in the [Chapter
-3](https://subscription.packtpub.com/book/big_data_and_business_intelligence/9781789131499/3), *Effective
-CQL* .
+`PRIMARY KEY` , and the key that determines the row’s token or
+placement in the cluster.
 
 Each node is also assigned additional, ancillary token ranges, depending
 on the replication factor specified. Therefore, data written at an RF of
 three will be written to one primary node, as well as a secondary and
 tertiary node.
 
-### Partitioners {.title}
+### Partitioners
 
 The component that helps to determine the nodes responsible for specific
 partitions of data is known as the partitioner. Apache Cassandra
@@ -44,9 +41,9 @@ from:
 Partitioners differ from each other in both efficiency and
 data-distribution strategy.
 
-#### ByteOrderedPartitioner {.title}
+#### ByteOrderedPartitioner
 
-`ByteOrderedPartitioner`{.literal} sorts rows in the cluster lexically
+`ByteOrderedPartitioner` sorts rows in the cluster lexically
 by partition key. Queried results are then returned ordered by that key.
 Tokens are calculated by the hexadecimal value of the beginning of the
 partition key.
@@ -56,9 +53,9 @@ result set by a partition key may seem like a good idea. But there are
 several problems with this partitioner. Foremost among them is that data
 distribution typically suffers.
 
-#### RandomPartitioner {.title}
+#### RandomPartitioner
 
-`RandomPartitioner`{.literal} was the default partitioner prior to
+`RandomPartitioner` was the default partitioner prior to
 Apache Cassandra 1.2. Tokens are calculated using a MD5 hash of the
 complete partition key. Possible token values range from zero to
 *(2^127^) - 1*. For additional information you can refer to Saha S.
@@ -68,10 +65,10 @@ complete partition key. Possible token values range from zero to
 
  
 
-#### Murmur3Partitioner {.title}
+#### Murmur3Partitioner
 
-`Murmur3Partitioner`{.literal} is an improvement in efficiency over
-`RandomPartitioner`{.literal}, and is currently the default partitioner.
+`Murmur3Partitioner` is an improvement in efficiency over
+`RandomPartitioner` , and is currently the default partitioner.
 The **murmur3** hashing algorithm is more efficient, because Cassandra
 does not really need the extra benefits provided by a cryptographic hash
 (MD5). Possible token values range from *-(2^63^)* to *(2^63^)-1*.
@@ -82,36 +79,36 @@ Important points about Apache Cassandra's partitioners:
     implement a partitioner at the keyspace or table level.
 -   Partitioners are not compatible. Once you select a partitioner, it
     cannot be changed without completely reloading the data.
--   Use of `ByteOrderedPartitioner`{.literal} is considered to be an
+-   Use of `ByteOrderedPartitioner` is considered to be an
     anti-pattern.
--   `Murmur3Partitioner`{.literal} is an improvement on the efficiency
-    of `RandomPartitioner`{.literal}.
+-   `Murmur3Partitioner` is an improvement on the efficiency
+    of `RandomPartitioner` .
 
-`Murmur3Partitioner`{.literal} is the default partitioner, and should be
+`Murmur3Partitioner` is the default partitioner, and should be
 used in new cluster builds.
 
-### Note {.title}
+### Note
 
-`ByteOrderedPartitioner`{.literal} and `RandomPartitioner`{.literal} are
+`ByteOrderedPartitioner` and `RandomPartitioner` are
 still delivered with Apache Cassandra for backward compatibility,
 providing older implementations with the ability to upgrade.
 
-### Single token range per node {.title}
+### Single token range per node
 
 Prior to Apache Cassandra 1.2, nodes were assigned contiguous ranges of
 token values. With this approach, token ranges had to be computed and
-configured manually, by setting the `initial_token`{.literal}property
-in `cassandra.yaml`{.literal}. A possible token distribution
-(using`Murmur3Partitioner`{.literal}) with single token ranges assigned
+configured manually, by setting the `initial_token` property
+in `cassandra.yaml` . A possible token distribution
+(using`Murmur3Partitioner` ) with single token ranges assigned
 per node is as follows:
 
   ------------- ---------------------------------- ----------------------------------
   **Node \#**   **Start token**                    **End token**
-  0             `5534023222112865485`{.literal}    `-9223372036854775808`{.literal}
-  1             `-9223372036854775807`{.literal}   `-5534023222112865485`{.literal}
-  2             `-5534023222112865484`{.literal}   `-1844674407370955162`{.literal}
-  3             `-1844674407370955161`{.literal}   `1844674407370955161`{.literal}
-  4             `1844674407370955162`{.literal}    `5534023222112865484`{.literal}
+  0             `5534023222112865485`    `-9223372036854775808` 
+  1             `-9223372036854775807`   `-5534023222112865485` 
+  2             `-5534023222112865484`   `-1844674407370955162` 
+  3             `-1844674407370955161`   `1844674407370955161` 
+  4             `1844674407370955162`    `5534023222112865484` 
   ------------- ---------------------------------- ----------------------------------
 
 Table 2.1: An example of the token range assignments for a five-node
@@ -126,16 +123,16 @@ The additional nodes designated to hold secondary ranges of data are
 determined by walking the ring (or data center, depending on replication
 strategy) in a clockwise direction:
 
-![](./3_files/148a1537-8f7c-40c5-8174-5be36205f7c9.png)
+![](https://raw.githubusercontent.com/fenago/apache-cassandra-intellij/master/md_files/mastering_images//148a1537-8f7c-40c5-8174-5be36205f7c9.png)
 
 Figure 2.2: A five-node cluster (non-vnodes) illustrating how one node
 follows another based on their start and end token ranges
 
-For example, consider the `hi_scores_by_game`{.literal} table from the
-previous chapter. As that table uses `game`{.literal} as its partition
+For example, consider the `hi_scores_by_game` table from the
+previous lab. As that table uses `game` as its partition
 key, data stored in that table will be written to a node based on the
-hash of the value it has for `game`{.literal}. If we were to store data
-for the `Pacman`{.literal} game, its hashed token value would look like
+hash of the value it has for `game` . If we were to store data
+for the `Pacman` game, its hashed token value would look like
 this:
 
 Copy
@@ -149,13 +146,13 @@ cassdba@cqlsh:packt&gt; SELECT game, token(game)
       Pacman | 4538621633640690522
 ```
 
-The partition key value of `Pacman`{.literal} hashes to a token of
-`4538621633640690522`{.literal}. Based on the figures depicting the
+The partition key value of `Pacman` hashes to a token of
+`4538621633640690522` . Based on the figures depicting the
 preceding five-node cluster, node four is primarily responsible for this
-data, as the token falls between `1844674407370955162`{.literal} and
-`5534023222112865484`{.literal}.
+data, as the token falls between `1844674407370955162` and
+`5534023222112865484` .
 
-Now let's assume that the `packt`{.literal} keyspace has the following
+Now let's assume that the `packt`  keyspace has the following
 definition:
 
 Copy
@@ -166,21 +163,21 @@ CREATE KEYSPACE packt WITH replication =
   AND durable_writes = true;
 ```
 
-If all five of the nodes are in the `ClockworkAngels`{.literal} data
+If all five of the nodes are in the `ClockworkAngels`  data
 center, then the nodes responsible for the two additional replicas can
 be found by traversing the ring in a clockwise manner. In this case,
 node zero is responsible for the second replica of the
-`Pacman`{.literal} high score data, and node one is responsible for the
+`Pacman` high score data, and node one is responsible for the
 third replica.
 
-### Note {.title}
+### Note
 
-`NetworkTopologyStrategy`{.literal} also takes logical rack definition
+`NetworkTopologyStrategy` also takes logical rack definition
 into account. When determining additional replica placement, this
 strategy will attempt to place replicas on different racks, to help
 maintain availability in the event of a rack failure scenario.
 
-### Vnodes {.title}
+### Vnodes
 
 Newer versions of Apache Cassandra have an option to use virtual nodes,
 better known as **vnodes**. Using vnodes, each node is assigned several
@@ -189,11 +186,11 @@ its data load:
 
   ------------- ----------------------------------------------------------------
   **Node \#**   **Token ranges**
-  0             `79935 to -92233, -30743 to -18446, 55341 to 67638`{.literal}
-  1             `-92232 to -79935, -61488 to 61489, 43043 to 55340`{.literal}
-  2             `-79934 to -67638, -43041 to -30744, 67639 to 79935`{.literal}
-  3             `-67637 to -55340, 61490 to 18446,18447 to 30744`{.literal}
-  4             `-55339 to -43042, -18445 to -61489, 30745 to 43042`{.literal}
+  0             `79935 to -92233, -30743 to -18446, 55341 to 67638` 
+  1             `-92232 to -79935, -61488 to 61489, 43043 to 55340` 
+  2             `-79934 to -67638, -43041 to -30744, 67639 to 79935` 
+  3             `-67637 to -55340, 61490 to 18446,18447 to 30744` 
+  4             `-55339 to -43042, -18445 to -61489, 30745 to 43042` 
   ------------- ----------------------------------------------------------------
 
 Table 2.2: An example of the token range distribution for a five-node
@@ -211,14 +208,14 @@ several benefits over single, manually-specified token ranges per node:
     new nodes are added to the cluster, to prevent the existing nodes
     from needing to be reconfigured and bounced (restarted).
 
-### Note {.title}
+### Note
 
 Cassandra 3.0 uses a new token-allocation algorithm that allows the
 distribution of data to be optimized for a specific keyspace. Invoking
 this algorithm is only possible when using vnodes and
-`Murmur3Partitioner`{.literal}. It requires that a keyspace be specified
-for the `allocate_tokens_for_keyspace`{.literal} property in the
-`cassandra.yaml`{.literal} file. You can refer to Apache Software
+`Murmur3Partitioner` . It requires that a keyspace be specified
+for the `allocate_tokens_for_keyspace` property in the
+`cassandra.yaml` file. You can refer to Apache Software
 Foundation (2016). Documentation: *Adding, replacing, moving and
 removing nodes, r*etrieved on 20180418 from:
 [http://cassandra.apache.org/doc/latest/operating/topo\_changes.html](http://cassandra.apache.org/doc/latest/operating/topo_changes.html).
