--- a/md_files/2_cassandra_architecture-md/4.md
+++ b/md_files/2_cassandra_architecture-md/4.md
@@ -1,4 +1,4 @@
-Cassandra's write path {.title style="clear: both"}
+Cassandra's write path
 ----------------------
 
 * * * * *
@@ -7,7 +7,7 @@ Understanding how Cassandra handles writes is key to knowing how to
 build applications on top of it. The following is a high-level diagram
 of how the Cassandra write path works:
 
-![](./4_files/d8cba1d6-07f7-404e-a4e3-d73233474f3e.png)
+![](https://raw.githubusercontent.com/fenago/apache-cassandra-intellij/master/md_files/mastering_images/d8cba1d6-07f7-404e-a4e3-d73233474f3e.png)
 
 Figure 2.3: An illustration of the Cassandra write path, showing how
 writes are applied both to in-memory and on-disk structures
@@ -17,7 +17,7 @@ There is an in-memory structure known as a **memtable**, which gets the
 write. Additionally, the new data is written to the commit log, which is
 on-disk.
 
-### Note {.title}
+### Note
 
 The commit log is Cassandra's way of enforcing durability in the case of
 a *plug-out-of-the-wall* event. When a node is restarted, the commit log
