--- a/md_files/2_cassandra_architecture-md/6.md
+++ b/md_files/2_cassandra_architecture-md/6.md
@@ -1,27 +1,19 @@
 
-On-disk storage {.title style="clear: both"}
+On-disk storage
 ---------------
 
 * * * * *
 
 When rows are written to disk, they are stored in different types of
 file. Let's take a quick look at these files, which should be present
-after what we did in [Chapter
-1](https://subscription.packtpub.com/book/big_data_and_business_intelligence/9781789131499/1),
-*Quick Start*.
+after what we did in previous lab.
 
-### Note {.title}
 
-If you have not followed the examples from [Chapter
-1](https://subscription.packtpub.com/book/big_data_and_business_intelligence/9781789131499/1), *Quick
-Start*, that's okay. But some of the data to follow may be different for
-you.
+### SSTables
 
-### SSTables {.title}
-
-First of all, let's `cd`{.literal} over to where our table data is
+First of all, let's `cd` over to where our table data is
 stored. By default, keyspace and table data is stored in the
-`data/`{.literal} directory, off of the `$CASSANDRA_HOME`{.literal}
+`data/` directory, off of the `$CASSANDRA_HOME` 
 directory. Listing out the files reveals the following:
 
 Copy
@@ -42,28 +34,28 @@ drwxr-xr-x   6 aploetz aploetz  204 May 29 08:26 ..
 -rw-r--r--   1 aploetz aploetz   92 May 29 08:28 mc-1-big-TOC.txt
 ```
 
-The `mc-1-big-TOC.txt`{.literal} file is the table of contents file for
+The `mc-1-big-TOC.txt` file is the table of contents file for
 the directory. Listing its contents essentially shows the same list of
 files as we have previously. Some of the other files match up with parts
 of the Cassandra read path:
 
--   `mc-1-big-Index.db`{.literal}:** **Primary key index (matches
+-   `mc-1-big-Index.db` :** **Primary key index (matches
     partition keys to their data file positions)
--   `mc-1-big-Summary.db`{.literal}:** **Partition summary
--   `mc-1-big-CompressionInfo.db`{.literal}:** **Compression offsets
--   `mc-1-big-Filter.db`{.literal}:** **Bloom filter
--   `mc-1-big-Digest.crc32`{.literal}: Contains a **Cyclic Redundancy
+-   `mc-1-big-Summary.db` :** **Partition summary
+-   `mc-1-big-CompressionInfo.db` :** **Compression offsets
+-   `mc-1-big-Filter.db` :** **Bloom filter
+-   `mc-1-big-Digest.crc32` : Contains a **Cyclic Redundancy
     Check** (**CRC**) or **checksum** value for the uncompressed file
     chunks
 
  
 
-The last file is `mc-1-big-Data.db`{.literal}, which contains the data
+The last file is `mc-1-big-Data.db` , which contains the data
 for the table. Listing out the contents of the file with a system tool,
 such as cat, will be cumbersome to read. So we will examine this file
 using some of the tools that come with Apache Cassandra.
 
-#### How data was structured in prior versions {.title}
+#### How data was structured in prior versions
 
 In Apache Cassandra versions 0.4 to 2.2, SSTable data was structured by
 row key. A row key kept a map of columns underneath it with their
@@ -72,8 +64,8 @@ the key/value map structure from Java, it's easy to think of it as a map
 of a map.
 
 As an example, consider the following CQL query from the previous
-chapter. Recall that it retrieves video game high-score data for a
-player named `Connor`{.literal}:
+lab. Recall that it retrieves video game high-score data for a
+player named `Connor` :
 
 Copy
 
@@ -94,7 +86,7 @@ is not how the data is stored on-disk. In Apache Cassandra versions 1.2
 to 2.2, CQL is simply a layer that abstracts the SSTable structure. If
 you were using Apache Cassandra 2.1 or earlier, this data could be
 viewed with the command-line interface tool, also known
-as `cassandra-cli`{.literal}:
+as `cassandra-cli` :
 
 Copy
 
@@ -126,32 +118,32 @@ RowKey: Connor
 
 A few things to note here:
 
--   We defined the partition key as the `name`{.literal} column, which
+-   We defined the partition key as the `name` column, which
     does not seem to be present here. But the get query works by simply
-    retrieving data for `RowKey`{.literal} of `Connor`{.literal}.
--   The `game`{.literal} column was defined as our clustering key.
-    Again, `game`{.literal} itself is not present here, but we can see
+    retrieving data for `RowKey` of `Connor` .
+-   The `game` column was defined as our clustering key.
+    Again, `game` itself is not present here, but we can see
     that the score recorded for each game seems to be keyed by the
     game's title (such
-    as `name=Frogger:score, value=000000000000107c, timestamp=1527640087988234`{.literal}).
+    as `name=Frogger:score, value=000000000000107c, timestamp=1527640087988234` ).
 -   The CLI informs us that one row has been returned. As far as the
     storage layer is concerned, all cells (column keys and their values)
     constitute a single row.
 
 The most important thing to remember from this example is that all data
 underneath a particular partition key is stored together. This is an
-important lesson that we will draw upon heavily in the next chapter.
+important lesson that we will draw upon heavily in the next lab.
 
-#### How data is structured in newer versions {.title}
+#### How data is structured in newer versions
 
 In versions of Apache Cassandra from 3.0 on, the underlying data is
 structured slightly differently. The Cassandra storage engine was
 rewritten as a part of this release, providing several benefits.
 
 Consider the CQL query used as the basis for the prior example, where we
-queried our the `hi_scores`{.literal} table for the player named
-`Connor`{.literal}. If we were to look at the underlying data using the
-`sstabledump`{.literal} tool, it would look something like this:
+queried our the `hi_scores` table for the player named
+`Connor` . If we were to look at the underlying data using the
+`sstabledump` tool, it would look something like this:
 
 Copy
 
@@ -206,15 +198,15 @@ tools/bin/sstabledump data/data/packt/hi_scores-73a9df80637b11e8836561ec0efea4b2
  
 
 It's important to note from this JSON output that the data for
-`Connor`{.literal} is divided into a hierarchy of three distinct
-sections: `partitions`{.literal}, `rows`{.literal}, and
-`cells`{.literal}. Whereas before there were simply partitions
+`Connor` is divided into a hierarchy of three distinct
+sections: `partitions` , `rows` , and
+`cells` . Whereas before there were simply partitions
 containing cells of data, rows are now a first-class citizen in the
 Cassandra world. In this way, CQL is no longer an abstraction, but
 rather a fairly accurate representation of how the data is stored. This
-will be discussed in more detail in the next chapter.
+will be discussed in more detail in the next lab.
 
-### Note {.title}
+### Note
 
 Even with the new storage engine, it is still important to note that all
 data underneath a particular partition key is stored together.
