--- a/md_files/2_cassandra_architecture-md/7.md
+++ b/md_files/2_cassandra_architecture-md/7.md
@@ -1,4 +1,4 @@
-Additional components of Cassandra {.title style="clear: both"}
+Additional components of Cassandra
 ----------------------------------
 
 * * * * *
@@ -10,7 +10,7 @@ way that treats multiple machines as a single data source requires some
 extra engineering. Here we'll explore the additional components which
 make that possible.
 
-### Gossiper {.title}
+### Gossiper
 
 Gossiper is a peer-to-peer communication protocol that a node uses to
 communicate with the other nodes in the cluster. When the nodes gossip
@@ -23,19 +23,19 @@ Each node's gossiper runs once per second (Saha 2017) and initiates
 communication with up to three other nodes. The gossip protocol first
 runs when the node is attempting to join the cluster. As a new node
 contains no information on the current network topology, it must be
-preconfigured with a list of current live nodes or `seeds`{.literal} to
+preconfigured with a list of current live nodes or `seeds` to
 help it start the communication process.
 
-### Note {.title}
+### Note
 
-We will discuss the concept of seed nodes in Chapter 4, *Configuring a
+We will discuss the concept of seed nodes in lab 4, *Configuring a
 Cluster*. The most important thing to remember about them, is that they
 help new nodes discover the rest of the cluster's network topology when
 joining. All nodes are considered to be peers in Cassandra, and the
 seed-node designation does not change that.
 
 You can view the currently perceived gossip state of any node using the
-`nodetool`{.literal} utility on any node. The following command
+`nodetool` utility on any node. The following command
 demonstrates what this looks like with a three-node cluster:
 
 Copy
@@ -92,15 +92,15 @@ information about it. Things such as status, data load, host ID, and
 schema version are readily visible. This is a good way to quickly gain
 an understanding of one node's view of the cluster.
 
-### Note {.title}
+### Note
 
 Remember, each node maintains its own view of the cluster's gossip
 state. While it should be the same on all nodes, it sometimes is not. It
 is entirely possible that some nodes can see certain nodes as down when
-other nodes do not. The `nodetool gossipinfo`{.literal} command can be a
+other nodes do not. The `nodetool gossipinfo` command can be a
 valuable tool when troubleshooting firewall or network issues. 
 
-### Snitch {.title}
+### Snitch
 
 Cassandra uses a component known as the snitch to direct read and write
 operations to the appropriate nodes. When an operation is sent to the
@@ -112,7 +112,7 @@ rack-aware. That is, they are capable of viewing (predetermined) groups
 of nodes in the cluster as **logical data centers**. Additionally, the
 data centers can be further divided into logical racks.
 
-### Note {.title}
+### Note
 
 The term **logical** is used here because the data centers may or may
 not be physically separate from each other. That is, nodes in a single
@@ -121,7 +121,7 @@ snitch will enforce data-replication for each separately.
 
 The replication of data per keyspace is defined in the keyspace
 definition using the configuration properties of
-`NetworkTopologyStrategy`{.literal}. This can be seen in the following
+`NetworkTopologyStrategy` . This can be seen in the following
 example keyspace definition:
 
 Copy
@@ -137,17 +137,17 @@ CREATE KEYSPACE packt WITH replication = {
  
 
 In the previous example, we'll assume the use of
-`GossipingPropertyFileSnitch`{.literal}, and that we have a number of
-nodes in our cluster assigned to our `ClockworkAngels`{.literal} data
-center and some assigned to our `PermanentWaves`{.literal} data center.
+`GossipingPropertyFileSnitch` , and that we have a number of
+nodes in our cluster assigned to our `ClockworkAngels` data
+center and some assigned to our `PermanentWaves` data center.
 When a write operation occurs on any of the tables stored in the
-`packt`{.literal} keyspace, the snitch will ensure that three replicas
-of that data are written to the `ClockworkAngels`{.literal} data center.
+`packt` keyspace, the snitch will ensure that three replicas
+of that data are written to the `ClockworkAngels` data center.
 Likewise, two replicas of the data will be written to the
-`PermanentWaves`{.literal} data center.
+`PermanentWaves` data center.
 
 As previously mentioned, the nodes in a data center can be further
-divided into racks. Let's assume that our `ClockworkAngels`{.literal}
+divided into racks. Let's assume that our `ClockworkAngels` 
 data center has six nodes. To maintain the maximum amount of
 availability possible, we could divide them up like this:
 
@@ -165,20 +165,20 @@ Node             Rack
 192.168.255.6    East_1
 ```
 
-### Note {.title}
+### Note
 
 Nodes in a data center are ordered by primary token range, not
 necessarily by IP address. This example was ordered by IP for
 simplicity.
 
 Let's assume that our write has a partition key that hashes out to a
-primary range owned by `192.168.255.2`{.literal}, which is in the
-`West_1`{.literal} rack. The snitch will ensure that the first replica
-is written to `192.168.255.2`{.literal}. Since our keyspace has an RF of
+primary range owned by `192.168.255.2` , which is in the
+`West_1` rack. The snitch will ensure that the first replica
+is written to `192.168.255.2` . Since our keyspace has an RF of
 three, the snitch will then walk the ring (clockwise by token ranges) to
 place the remaining replicas. As there are multiple racks, it will try
 to spread the replicas evenly across them. Therefore, it will place the
-second replica on `192.168.255.3`{.literal}, which is in a different
+second replica on `192.168.255.3` , which is in a different
 rack. As both racks are now covered from an availability perspective,
 the third replica will be placed on the next node, regardless of rack
 designation.
@@ -187,7 +187,7 @@ designation.
 
  
 
-### Note {.title}
+### Note
 
 When working with physical data centers, entire racks have been known to
 fail. Likewise, entire availability zones have been known to fail in the
@@ -200,17 +200,17 @@ number of nodes that evenly compliment your RF. For instance, with an RF
 of three, the snitch will spread the data evenly over a total of three,
 six, or nine nodes, split into three racks.
 
-### Phi failure-detector {.title}
+### Phi failure-detector
 
 Apache Cassandra uses an implementation of the **Phi Failure-Accrual**
 algorithm. The basic idea is that gossip between nodes is measured on a
 scale that adjusts to current network conditions. The results are
 compared to a preconfigured, static value
-(`phi_convict_threshold`{.literal}) that helps a node decide whether
-another node should be marked as down. `phi_convict_threshold`{.literal}
-will be discussed in later chapters.
+(`phi_convict_threshold` ) that helps a node decide whether
+another node should be marked as down. `phi_convict_threshold` 
+will be discussed in later labs.
 
-### Tombstones {.title}
+### Tombstones
 
 Deletes in the world of distributed databases are hard to do. After all,
 how do you replicate nothing? Especially a key for nothing which once
@@ -239,7 +239,7 @@ Accumulation of tombstones will result in slower queries over time. For
 this reason, use cases that require a high amount of delete activity are
 considered an anti-pattern with Apache Cassandra.
 
-### Note {.title}
+### Note
 
 The Apache Cassandra configuration has settings for warnings and failure
 thresholds regarding the number of tombstones that can be returned in a
@@ -249,16 +249,16 @@ Tombstones are eventually removed, but only after two specific
 conditions are met:
 
 -   The tombstone has existed longer than the table's defined
-    `gc_grace_seconds`{.literal} period
+    `gc_grace_seconds` period
 -   Compaction runs on that table
 
-The `gc_grace_seconds`{.literal} stipulation exists to give the
+The `gc_grace_seconds` stipulation exists to give the
 tombstone ample time to either replicate, or be fixed by a repair
 operation. After all, if tombstones are not adequately replicated, a
 read to a node that is missing a tombstone can result in data ghosting
 its way back into a result set.
 
-### Hinted handoff {.title}
+### Hinted handoff
 
 When a node reports another as down, the node that is still up will
 store structures, known as **hints**, for the down node. Hints are
@@ -266,7 +266,7 @@ essentially writes meant for one node that are temporarily stored on
 another. When the down node returns to a healthy status, the hints are
 then streamed to that node in an attempt to re-sync its data.
 
-### Note {.title}
+### Note
 
 As storage is finite, hints will be stored for up to three hours, by
 default. This means that a down node must be brought back within that
@@ -277,12 +277,12 @@ hints table of the system keyspace. The problem with this approach is
 that once the stored hints were replayed, they were then deleted. This
 frequently led to warnings and failures due to tombstone accumulation.
 Apache Cassandra version 3.0 and up moved to a file-based system of hint
-storage, thus avoiding this problem so long as the `hints`{.literal}
+storage, thus avoiding this problem so long as the `hints` 
 directory has disk space available.
 
  
 
-### Compaction {.title}
+### Compaction
 
 As previously mentioned, once SSTable files are written to disk, they
 are immutable (cannot be written to again). Additional writes for that
@@ -300,16 +300,16 @@ following functions:
 -   Multiple data files for a table are merged into a single data file
 -   Obsoleted data is removed
 -   Tombstones that have outlived the table's
-    `gc_grace_seconds`{.literal} period are removed
+    `gc_grace_seconds` period are removed
 
 There are two different compaction strategies available with Apache
-Cassandra: `SizeTieredCompactionStrategy`{.literal} and
-`LeveledCompactionStrategy`{.literal}. These will be detailed in a later
-chapter. Compaction is configured on a per-table basis, and its
+Cassandra: `SizeTieredCompactionStrategy` and
+`LeveledCompactionStrategy` . These will be detailed in a later
+lab. Compaction is configured on a per-table basis, and its
 configuration includes thresholds for determining how often compaction
 is run.
 
-### Note {.title}
+### Note
 
 Cassandra does a good job of figuring out when compaction needs to be
 run. The best approach is to let it do what it needs to do. If it should
@@ -318,7 +318,7 @@ question. Forcing compaction (via the command line) to run outside of
 its configured thresholds has been known to drastically delay future
 compaction times.
 
-### Repair {.title}
+### Repair
 
 Sometimes data replicas on one or more Cassandra nodes can get out of
 sync. There are a variety of reasons for this, including prior network
@@ -326,7 +326,7 @@ instability, hardware failure, and nodes crashing and staying down past
 the three-hour hint window. When this happens, Apache Cassandra comes
 with a repair process that can be run to rectify these inconsistencies.
 
-### Note {.title}
+### Note
 
 The repair process does not run on its own, and must be executed
 manually. Tools such as Reaper for Apache Cassandra allow for some
@@ -341,7 +341,7 @@ mechanism, which uses a binary Merkle tree to locate inconsistent
 replicas across different nodes. Discrepancies are then rectified by
 streaming the correct data from another node.
 
-#### Merkle tree calculation {.title}
+#### Merkle tree calculation
 
 Merkle trees are created from the bottom up, starting with hashes of the
 base or leaf data. The leaf data is grouped together by partition
@@ -352,22 +352,22 @@ with neighboring parents (to create their parents), until (Kozliner
 Based on the hash value of the root for a token range, the Merkle trees
 of different nodes can be quickly compared.
 
-### Note {.title}
+### Note
 
 A Merkle tree calculation can consume high amounts of resources (CPU,
 disk I/O) on a node, which can result in temporary query timeouts as the
 node continues to try to serve requests. For this reason, it is best to
 run repairs during times when client requests are low. The Merkle tree
 calculation part of the repair processes can be monitored with
-`nodetool compactionstats`{.literal}, where it will display as a
+`nodetool compactionstats` , where it will display as a
 **validation compaction**.
 
 Let’s walk through a quick example. Assume that we've added high scores
-for more users, we're running a repair on the `hi_scores`{.literal}
+for more users, we're running a repair on the `hi_scores` 
 table, and we're only concerned about the token range of
-`-9223372036854775807`{.literal} to `-7686143364045646507`{.literal}.
-We'll query our the `hi_scores`{.literal} table for our users whose
-token value for `name`{.literal} (our partition key) falls within that
+`-9223372036854775807` to `-7686143364045646507` .
+We'll query our the `hi_scores` table for our users whose
+token value for `name` (our partition key) falls within that
 range:
 
 Copy
@@ -387,10 +387,10 @@ cassdba@cqlsh&gt; SELECT DISTINCT name,token(name) FROM packt.hi_scores
 (4 rows)
 ```
 
-### Note {.title}
+### Note
 
 Executing a range query on a partition key is only possible when also
-using the `token`{.literal} function, as shown previously.
+using the `token` function, as shown previously.
 
 Now let's compute a hash (MD5 is used for this example) for all data
 within each partition:
@@ -405,10 +405,10 @@ within each partition:
 
 To build a Merkle tree for this data, we start by listing each partition
 of hashed data separately, as leaf nodes. Then we will backtrack toward
-our root node by applying the hash function,` h()`{.literal}, while
+our root node by applying the hash function,` h()` , while
 combining our data recursively:
 
-![](./7_files/1774c596-cf3e-4ba6-93c3-5b78fe54ebb9.jpeg)
+![](https://raw.githubusercontent.com/fenago/apache-cassandra-intellij/master/md_files/mastering_images/1774c596-cf3e-4ba6-93c3-5b78fe54ebb9.jpeg)
 
 Figure 2.5: An example Merkle tree calculation for a node's token range
 containing four partitions of data. This illustrates how they are hashed
@@ -436,25 +436,25 @@ root node hash of *7077d9488b37f4d39c908eb7560f2323*. If one or more of
 them does not, the up-to-date node then prepares to stream a subset of
 the affected range of data to fix the inconsistency.
 
-#### Streaming data {.title}
+#### Streaming data
 
 Once discrepancies are identified via Merkle trees, data files are
 streamed to the node containing the inconsistent data. Once this
 streaming completes, the data should be consistent across all replicas.
 
-### Note {.title}
+### Note
 
 Repair streams consume network resources that can also interfere with a
 node's ability to serve requests. Repair progress can be monitored using
-the `nodetool netstats`{.literal} command.
+the `nodetool netstats` command.
 
-### Read repair {.title}
+### Read repair
 
 Read repair is a feature that allows for inconsistent data to be fixed
-at query time. `read_repair_chance`{.literal} (and
-`dclocal_read_repair_chance`{.literal}) is configured for each table,
+at query time. `read_repair_chance` (and
+`dclocal_read_repair_chance` ) is configured for each table,
 defaulting to 0.1 (10% chance). When it occurs (only with read
-consistency levels higher than `ONE`{.literal}), Apache Cassandra will
+consistency levels higher than `ONE` ), Apache Cassandra will
 verify the consistency of the replica with all other nodes not involved
 in the read request. If the requested data is found to be inconsistent,
 it is fixed immediately.
@@ -462,12 +462,12 @@ it is fixed immediately.
  
 
 Do note that read repairs do not occur when read consistency is set to
-`ONE`{.literal} or `LOCAL_ONE`{.literal}. Also, reads at a consistency
+`ONE` or `LOCAL_ONE` . Also, reads at a consistency
 level of all will force a read repair to happen 100% of the time.
 However, these read repairs do incur latency, which is why they are
 typically set to low percentages.
 
-### Note {.title}
+### Note
 
 Sometimes a single partition or key will be all that is inconsistent. If
 you find yourself in this situation, forcing a read repair is a simple
@@ -475,7 +475,7 @@ task via cqlsh. If the number of inconsistent rows is a manageable
 number, you can fix them by setting your consistency level to all, and
 querying each of them.
 
-### Security {.title}
+### Security
 
 One criticism of NoSQL data stores is that security is often an
 afterthought. Cassandra is no exception to this view. In fact, Apache
@@ -485,17 +485,17 @@ enterprise-grade firewalls, by itself this is simply not enough. There
 are several features that Cassandra provides that can help to tighten up
 security on a cluster.
 
-#### Authentication {.title}
+#### Authentication
 
 Apache Cassandra allows for user authentication to be set up. Similar to
 other Cassandra components, users and their (encrypted) credentials are
 stored in a table inside the cluster. Client connections are required to
 provide valid username/password combinations before being allowed access
 to the cluster. To enable this functionality, simply change the
-`authenticator`{.literal} property in the
-`cassandra.yaml`{.literal} file from its default
-(`AllowAllAuthenticator`{.literal})
-to `PasswordAuthenticator`{.literal}:
+`authenticator` property in the
+`cassandra.yaml`  file from its default
+(`AllowAllAuthenticator` )
+to `PasswordAuthenticator` :
 
 Copy
 
@@ -503,19 +503,19 @@ Copy
 authenticator: PasswordAuthenticator
 ```
 
-### Note {.title}
+### Note
 
 Once you have created your own DBA-level superuser account for
 administrative purposes, you should never use the default cassandra user
 again. This is because the Cassandra user is the only user that has
-special provisions in the code to query the `system_auth`{.literal}
-tables at a consistency level higher than `ONE`{.literal} (it uses
-`QUORUM`{.literal}). This means that the default Cassandra user may not
+special provisions in the code to query the `system_auth` 
+tables at a consistency level higher than `ONE` (it uses
+`QUORUM` ). This means that the default Cassandra user may not
 be able to log in if multiple nodes are down.
 
 When user authentication is enabled, Cassandra will create the
-`system_auth`{.literal} keyspace. When
-using `PasswordAuthenticator`{.literal}, `CassandraRoleManager`{.literal}
+`system_auth` keyspace. When
+using `PasswordAuthenticator` , `CassandraRoleManager` 
 must also be used.
 
  
@@ -524,7 +524,7 @@ must also be used.
 
  
 
-#### Authorization {.title}
+#### Authorization
 
 With authentication set up, additionally enabling user authorization
 allows each user to be assigned specific permissions to different
@@ -532,18 +532,18 @@ Cassandra objects. In Apache Cassandra versions 2.2 and up, users are
 referred to as **roles**. With authorization enabled, roles can be
 assigned the following permissions via CQL:
 
--   `ALTER`{.literal}: Change table or keyspace definitions
--   `AUTHORIZE`{.literal}: Grant or revoke specific permissions to other
+-   `ALTER` : Change table or keyspace definitions
+-   `AUTHORIZE` : Grant or revoke specific permissions to other
     users
--   `CREATE:`{.literal}: Create new tables or keyspaces
--   `DESCRIBE`{.literal}: Retrieve definitions of a table or keyspace
--   `DROP`{.literal}: Delete specific tables or keyspaces
--   `EXECUTE`{.literal}: Run functions in a specific keyspace
--   `MODIFY`{.literal}: Run `DELETE`{.literal}, `INSERT`{.literal},
-    `UPDATE`{.literal}, or `TRUNCATE`{.literal} commands on a specific
+-   `CREATE:` : Create new tables or keyspaces
+-   `DESCRIBE` : Retrieve definitions of a table or keyspace
+-   `DROP` : Delete specific tables or keyspaces
+-   `EXECUTE` : Run functions in a specific keyspace
+-   `MODIFY` : Run `DELETE` , `INSERT` ,
+    `UPDATE` , or `TRUNCATE` commands on a specific
     table
--   `SELECT`{.literal}: Query a specific table
--   `ALL PERMISSIONS`{.literal}: No restricted access on specific tables
+-   `SELECT` : Query a specific table
+-   `ALL PERMISSIONS` : No restricted access on specific tables
     or keyspaces
 
 The following are some examples:
@@ -556,12 +556,12 @@ GRANT MODIFY ON KEYSPACE store TO store_app_user;
 GRANT ALL PERMISSIONS ON KEYSPACE mobile TO mobile_admin;
 ```
 
-#### Managing roles {.title}
+#### Managing roles
 
 As role-management is part of the user security backend, it
-requires `PasswordAuthenticator`{.literal} to be enabled before its
+requires `PasswordAuthenticator` to be enabled before its
 functionality is activated. The role system allows you to assign
-permissions to a role, and then `GRANT`{.literal} access to that role
+permissions to a role, and then `GRANT` access to that role
 for another user/role. As mentioned in the previous section, role
 management is new as of Apache Cassandra 2.2, and can greatly simplify
 user-management and permission-assignment.
@@ -579,7 +579,7 @@ CREATE ROLE supply_chain_rw WITH LOGIN=true AND PASSWORD='avbiuo2t48';
 
  
 
-#### Client-to-node SSL {.title}
+#### Client-to-node SSL
 
 Enabling client-to-node **Secure Socket Layer** (**SSL**) security has
 two main benefits. First, each client connecting to the cluster must
@@ -588,16 +588,16 @@ Authority** (**CA**) in the node's Java KeyStore. Second, upon
 successful connection (and cert validation), all traffic between the
 client and node will be encrypted.
 
-#### Node-to-node SSL {.title}
+#### Node-to-node SSL
 
 Enabling node-to-node SSL security is designed to prevent a specific
 avenue of attack. A node will not be allowed to join the cluster, unless
 it presents a valid SSL certificate in its Java KeyStore and the Java
 TrustStore matches with the other nodes in the cluster. When this level
 of security is active, it will encrypt communication between the nodes
-over port `7001`{.literal}.
+over port `7001` .
 
-### Note {.title}
+### Note
 
 Node-to-node SSL may seem unnecessary, but without it, an internal
 attacker could join a rogue node to your cluster. Then once it has
