--- a/md_files/2_cassandra_architecture-md/8.md
+++ b/md_files/2_cassandra_architecture-md/8.md
@@ -1,19 +1,5 @@
-This website uses cookies and other tracking technology to analyse
-traffic, personalise ads and learn how we can improve the experience for
-our visitors and customers. We may also share information with trusted
-third-party providers. For an optimal-browsing experience please click
-'Accept'. [Learn more](https://www.packtpub.com/about/cookie-policy)
+### Summary
 
-Accept
+In this lab, we discussed many aspects of Apache Cassandra. Some concepts may not have been directly about the Cassandra database, but concepts that influenced its design and use. These topics included Brewer's CAP theorem data-distribution and- partitioning; Cassandra's read and write paths; how data is stored on-disk; inner workings of components such as the snitch, tombstones, and failure-detection; and an overview of the delivered security features.
 
-![](https://www.facebook.com/tr?id=445429252334850&ev=PageView&noscript=1)
-
-Annotate
-
--   -   Allow anyone to **view** this annotation
--   Allow anyone to **edit** this annotation
-
-[Cancel](https://subscription.packtpub.com/#cancel)
-[Save](https://subscription.packtpub.com/#save)
-
-
+This lab was designed to give you the necessary background to understand the remaining labs. Apache Cassandra was architected to work the way it does for certain reasons. Understanding why will help you to provide effective configuration, build high-performing data models, and design applications that run without bottlenecks. In the next lab, we will discuss and explore CQL, and explain why it has certain limitations, and how to unleash its power.
